--- a/index.css
+++ b/index.css
@@ -14,18 +14,48 @@ header {
     /* width: 100%; */
     display: flex;
     justify-content: center;
+    background-color: white;
+}
+
+h1 {
+    font-family: 'Franklin Gothic Medium';
 }
 
 nav {
     /* width: 100%; */
+    height: 8%;
+    background-color: #333;
     display: flex;
+    justify-content: flex-start;
+}
+
+.navlink-container {
+    width: 8%;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+}
+
+.navlink {
+    color: azure;
+    font-family: 'Lucida Sans Regular';
+}
+
+a {
+    text-decoration: none;
 }
 
 footer {
     /* width: 100%; */
+    height: 8%;
     display: flex;
     justify-content: center;
+    background-color: whitesmoke;
+}
+
+h5 {
+    font-family: 'Trebuchet MS';
 }
 
 main {
@@ -33,6 +63,9 @@ main {
     display: grid;
     grid-template-columns: 20% 20% 20%;
     justify-content: center;
+    background-color: whitesmoke;
+    gap: 10px;
+    padding: 20px;
 }
 
 .pokemon-container {
@@ -40,6 +73,8 @@ main {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    background-color: rgb(230, 216, 216);
+    border-radius: 24px;
 }
 
 img {
