--- a/search.css
+++ b/search.css
@@ -1,5 +1,12 @@
 /* Main Content */
-
 main {
+    background-color: aquamarine;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+#searchbar {
+    display: flex;
+    flex-direction: row;
 }
