--- a/universal.css
+++ b/universal.css
@@ -5,6 +5,7 @@ html {
 }
 
 body {
+    display: grid;
     margin: auto;
     /* width: 100%; */
     height: 100%;
@@ -24,7 +25,6 @@ h1 {
 
 nav {
     /* width: 100%; */
-    height: 8%;
     background-color: #333;
     display: flex;
     justify-content: flex-start;
@@ -49,7 +49,6 @@ nav {
 
 footer {
     /* width: 100%; */
-    height: 8%;
     display: flex;
     justify-content: center;
 }
@@ -62,7 +61,19 @@ main {
     padding: 30px;
 }
 
-/* Pokemon Card images */
+button {
+    background-color: rgb(146, 146, 146);
+    font-family:'Trebuchet MS';
+    font-size: 36px;
+    color: rgb(0, 0, 0);
+    width: 100%;
+}
+
+button:hover {
+    background-color: rgb(195, 195, 195);
+}
+
+/* Pokemon Card images grid */
 
 #pokemon-grid {
     /* width: 100%; */
@@ -71,6 +82,8 @@ main {
     justify-content: center;
     gap: 10px;
 }
+
+/* Pokemon Card images */
 
 .pokemon-container {
     width: 100%;
