encapsulated files into seperate folders

--- a/styles/universal.css
+++ b/styles/universal.css
@@ -47,6 +47,10 @@ nav {
     font-family: 'Lucida Sans Regular';
 }
 
+a {
+    text-decoration: none;
+}
+
 footer {
     /* width: 100%; */
     display: flex;
