--- a/styles/search.css
+++ b/styles/search.css
@@ -28,6 +28,11 @@ main {
 
 aside {
     grid-column: 2 / span 1;
+    grid-row: 3 / span 2;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    background-color: #cdcdcd;
 }
 
 footer {
@@ -88,4 +93,15 @@ section>button {
 #pokemon-grid {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
+}
+
+/* History Tab */
+h4 {
+    margin: 0px;
+    height: 75px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family:'Franklin Gothic Medium';
+    font-size: 25px;
 }
