--- a/styles/universal.css
+++ b/styles/universal.css
@@ -6,6 +6,7 @@ html {
 
 body {
     display: grid;
+    grid-template-rows: 8% 8% auto 8%;
     margin: auto;
     /* width: 100%; */
     height: 100%;
