Transferred profile.html contents to profile.ejs

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,8 +5,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex-Profile! A01262284</title>
+    
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="universal.css">
+    <!-- <link rel="stylesheet" href="../styles/profile.css"> -->
 </head>
 <body>
-    
+    <!-- Header -->
+    <header>
+        <h1>
+            Jose Alfonso Clarito - Pokedex: (pokemon)!
+        </h1>
+    </header>
+
+    <!-- Navbar -->
+    <nav>
+        <a class="navlink-container" id="home" href="index.html">
+            <span class="navlink">Home</span>
+        </a>
+        <a class="navlink-container" id="search" href="search.html">
+            <span class="navlink">Search</span>
+        </a>
+    </nav>
+
+    <!-- Main -->
+    <main id="content">
+        <!-- Image -->
+        <figure id="pImg"></figure>
+        <!-- Name -->
+        <h2 id="pName">Victini</h2>
+        <!-- Type  -->
+        <div id="pTypes">
+            <h3>Types</h3>
+        </div>
+        <!-- Stats -->
+        <div id="pStats">
+            <h3>Stats</h3>
+        </div>
+        <!-- Abilities -->
+        <div id="pAbilities">
+            <h3>Abilities</h3>
+        </div>
+        <!-- Generation -->
+        <div id="pGen">Generation 5</div>
+        <!-- Others -->
+        <div>
+            <div id="pHeight"></div>
+            <div id="pWeight"></div>
+        </div>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <h5>
+            Copyright © FonseLULW; API from 
+            <a href="https://pokeapi.co/">pokeapi.co</a>
+        </h5>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="../scripts/universal.js"></script>
+    <script src="../scripts/profile.js"></script>
 </body>
 </html>
