Integrated profile.ejs to server

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,25 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex-Profile! A01262284</title>
-    
+
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="universal.css">
+    <link rel="stylesheet" href="../universal.css">
     <!-- <link rel="stylesheet" href="../styles/profile.css"> -->
 </head>
 <body>
     <!-- Header -->
     <header>
         <h1>
-            Jose Alfonso Clarito - Pokedex: (pokemon)!
+            Jose Alfonso Clarito - Pokedex: <%= id %>!
         </h1>
     </header>
 
     <!-- Navbar -->
     <nav>
-        <a class="navlink-container" id="home" href="index.html">
+        <a class="navlink-container" id="home" href="../index.html">
             <span class="navlink">Home</span>
         </a>
-        <a class="navlink-container" id="search" href="search.html">
+        <a class="navlink-container" id="search" href="../search.html">
             <span class="navlink">Search</span>
         </a>
     </nav>
