--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -33,7 +33,7 @@
         <!-- Image -->
         <figure id="pImg"></figure>
         <!-- Name -->
-        <h2 id="pName">Victini</h2>
+        <h2 id="pName"></h2>
         <!-- Type  -->
         <div id="pTypes">
             <h3>Types</h3>
