Used https to get Pokemon from pokeAPI in profile.ejs

--- a/styles/universal.css
+++ b/styles/universal.css
@@ -113,7 +113,8 @@ img {
 }
 
 @media screen and (max-width: 950px) {
-    nav {
-        background-color: turquoise;
+    #pokemon-grid {
+        grid-template-columns: 100% !important;
+        /* row-gap: 2%; */
     }
 }
