Implemented media queries - index.css, profile.css, universal.css, universal-mq.css

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,10 @@
 /* Main content */
-
 #pokemon-grid {
     padding: 30px;
+}
+
+@media screen and (max-width: 950px) {
+    .pokemon-container {
+        height: 60vh;
+    }
 }
