--- a/styles/search.css
+++ b/styles/search.css
@@ -1,5 +1,5 @@
 body {
-    grid-template-rows: 8% 8% 8% auto 8%;
+    grid-template-rows: 8vh 8vh 8vh auto 8vh;
     grid-template-columns: 80% 20%;
 }
 
