--- a/styles/universal-mq.css
+++ b/styles/universal-mq.css
@@ -1,6 +1,20 @@
 @media screen and (max-width: 950px) {
+    html {
+        font-size: 14px;
+    }
+
     #pokemon-grid {
-        grid-template-columns: 100% !important;
-        /* row-gap: 2%; */
+        grid-template-columns: 100%;
+    }
+
+    nav {
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    .navlink-container {
+        width: 100%;
+        height: 100%;
     }
 }
