--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -9,6 +9,7 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="../universal.css">
     <link rel="stylesheet" href="../profile.css">
+    <link rel="stylesheet" href="../universal-mq.css">
 </head>
 <body>
     <!-- Header -->
