--- a/styles/profile.css
+++ b/styles/profile.css
@@ -111,6 +111,7 @@ h3 {
         grid-column: 1 / span 1;
         grid-row: 1 / span 1;
         width: 100%;
+        height: 100%;
         margin: 0px;
         display: flex;
         justify-content: center;
@@ -118,6 +119,7 @@ h3 {
 
     #pImg > img {
         width: 100%;
+        height: 100%;
     }
 
     #pIdentity {
