--- a/styles/universal.css
+++ b/styles/universal.css
@@ -1,6 +1,6 @@
 /* All webpages */
 html {
-    width: 100vw;
+    width: 100%;
     height: 100%;
 }
 
@@ -108,6 +108,7 @@ button:hover {
 
 img {
     display: block;
-    aspect-ratio: 1 1;
+    /* aspect-ratio: 1 / 1; */
+    height: 100%;
     width: 100%;
 }
