--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -27,6 +27,9 @@
         <a class="navlink-container" id="search" href="../search.html">
             <span class="navlink">Search</span>
         </a>
+        <a class="navlink-container" id="timeline" href="#">
+            <span class="navlink">Timeline</span>
+        </a>
     </nav>
 
     <!-- Main -->
