Routed server to timeline page - server.js, index.html, search.html, profile.ejs, timeline.ejs

--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex-Timeline! A01262284</title>
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="../universal.css">
+    <link rel="stylesheet" href="../universal-mq.css">
 </head>
 <body>
     <!-- Header -->
     <header>
         <h1>
-            Jose Alfonso Clarito - Pokedex!
+            Jose Alfonso Clarito - Timeline!
         </h1>
     </header>
 
@@ -22,7 +26,7 @@
         <a class="navlink-container" id="search" href="../search.html">
             <span class="navlink">Search</span>
         </a>
-        <a class="navlink-container" id="timeline" href="#">
+        <a class="navlink-container" id="timeline" href="/timeline">
             <span class="navlink">Timeline</span>
         </a>
     </nav>
