--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -27,7 +27,7 @@
         <a class="navlink-container" id="search" href="../search.html">
             <span class="navlink">Search</span>
         </a>
-        <a class="navlink-container" id="timeline" href="#">
+        <a class="navlink-container" id="timeline" href="/timeline">
             <span class="navlink">Timeline</span>
         </a>
     </nav>
