--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -7,9 +7,9 @@
     <title>Pokedex-Profile! A01262284</title>
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="../universal.css">
-    <link rel="stylesheet" href="../profile.css">
-    <link rel="stylesheet" href="../universal-mq.css">
+    <link rel="stylesheet" href="/styles/universal.css">
+    <link rel="stylesheet" href="/styles/profile.css">
+    <link rel="stylesheet" href="/styles/universal-mq.css">
 </head>
 <body>
     <!-- Header -->
@@ -21,10 +21,10 @@
 
     <!-- Navbar -->
     <nav>
-        <a class="navlink-container" id="home" href="../index.html">
+        <a class="navlink-container" id="home" href="/">
             <span class="navlink">Home</span>
         </a>
-        <a class="navlink-container" id="search" href="../search.html">
+        <a class="navlink-container" id="search" href="html/search.html">
             <span class="navlink">Search</span>
         </a>
         <a class="navlink-container" id="timeline" href="/timeline">
@@ -82,7 +82,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="../scripts/universal.js"></script>
-    <script src="../scripts/profile.js"></script>
+    <script src="/scripts/universal.js"></script>
+    <script src="/scripts/profile.js"></script>
 </body>
 </html>
