--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -7,8 +7,8 @@
     <title>Pokedex-Timeline! A01262284</title>
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="../universal.css">
-    <link rel="stylesheet" href="../universal-mq.css">
+    <link rel="stylesheet" href="styles/universal.css">
+    <link rel="stylesheet" href="styles/universal-mq.css">
 </head>
 <body>
     <!-- Header -->
@@ -20,16 +20,23 @@
 
     <!-- Navbar -->
     <nav>
-        <a class="navlink-container" id="home" href="../index.html">
+        <a class="navlink-container" id="home" href="/">
             <span class="navlink">Home</span>
         </a>
-        <a class="navlink-container" id="search" href="../search.html">
+        <a class="navlink-container" id="search" href="html/search.html">
             <span class="navlink">Search</span>
         </a>
         <a class="navlink-container" id="timeline" href="/timeline">
             <span class="navlink">Timeline</span>
         </a>
     </nav>
+
+    <!-- Timeline -->
+    <main>
+        <section id="timeline-items">
+            
+        </section>
+    </main>
     
     <!-- Footer -->
     <footer>
