--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -63,6 +63,7 @@
     </footer>
     
     <!-- Scripts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="/scripts/universal.js"></script>
     <script src="/scripts/timeline.js"></script>
 </body>
