--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -82,7 +82,9 @@
     </footer>
 
     <!-- Scripts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="/scripts/universal.js"></script>
+    <script src="/scripts/events.js"></script>
     <script src="/scripts/profile.js"></script>
 </body>
 </html>
