--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -65,6 +65,7 @@
     <!-- Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="/scripts/universal.js"></script>
+    <script src="/scripts/events.js"></script>
     <script src="/scripts/timeline.js"></script>
 </body>
 </html>
