--- a/public/styles/universal.css
+++ b/public/styles/universal.css
@@ -66,7 +66,7 @@ main {
     padding: 30px;
 }
 
-button {
+button, input[type="submit"] {
     background-color: rgb(146, 146, 146);
     font-family:'Trebuchet MS';
     font-size: 36px;
@@ -74,7 +74,7 @@ button {
     width: 100%;
 }
 
-button:hover {
+button:hover, input[type="submit"]:hover {
     background-color: rgb(195, 195, 195);
 }
 
