--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -30,6 +30,12 @@
         <a class="navlink-container" id="timeline" href="/timeline">
             <span class="navlink">Timeline</span>
         </a>
+        <a class="navlink-container" id="checkout" href="/checkout">
+            <span class="navlink">Checkout</span>
+        </a>
+        <a class="navlink-container" id="receipts" href="/receipts">
+            <span class="navlink">Receipts</span>
+        </a>
         <a class="navlink-container" id="logout" href="/auth/logout">
             <span class="navlink">Logout</span>
         </a>
