--- a/views/receipts.ejs
+++ b/views/receipts.ejs
@@ -8,7 +8,7 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="styles/universal.css">
-    <link rel="stylesheet" href="styles/timeline.css">
+    <link rel="stylesheet" href="styles/receipts.css">
     <link rel="stylesheet" href="styles/universal-mq.css">
 </head>
 <body>
@@ -43,6 +43,16 @@
 
     <!-- Receipts -->
     <main>
+        <h2>Your Orders (No refunds)</h2>
+        <section>
+            <div class="single-order">
+                <div class="prod-id"></div>
+                <div class="prod-region"></div>
+                <div class="prod-arrival"></div>
+                <div class="prod-cost"></div>
+                <div class="prod-status"></div>
+            </div>
+        </section>
     </main>
     
     <!-- Footer -->
@@ -57,6 +67,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="/scripts/universal.js"></script>
     <script src="/scripts/events.js"></script>
-    <script src="/scripts/timeline.js"></script>
+    <script src="/scripts/receipts.js"></script>
 </body>
 </html>
