Created a new add to cart button on profile pages - profile.ejs, profile.css

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex-Profile! A01262284</title>
 
+    <!-- Google Icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/styles/universal.css">
     <link rel="stylesheet" href="/styles/profile.css">
@@ -52,6 +54,7 @@
         <h2 id="pIdentity">
             <div id="pName"><%= pokemon.name.toUpperCase() %></div>
             <div id="pID"><%= pokemon.id %></div>
+            <a id="pBuy" class="navlink-container"><span class="material-symbols-outlined">shopping_cart</span></a>
         </h2>
 
         <!-- Type  -->
