--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -1,3 +1,11 @@
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
+
 main {
     display: grid;
     grid-template-columns: 40% 40% 20%;
@@ -11,7 +19,7 @@ main {
     grid-row: 1 / span 1;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     height: 100%;
     width: 100%;
@@ -74,10 +82,22 @@ h3 {
 /* Name and ID */
 #pName {
     margin-left: 1rem;
+    margin-right: auto;
 }
 
 #pID {
     margin-right: 1rem;
+}
+
+#pBuy {
+    padding-right: 0.5em;
+    padding-left: 0.5rem;
+    height: 100%;
+    box-sizing: border-box;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 /* Types */
@@ -140,5 +160,9 @@ h3 {
     #pAbilities {
         grid-column: 1 / span 1;
         grid-row: 5 / span 1;
+    }
+
+    #pBuy {
+        width: 20%;
     }
 }
