--- a/public/styles/universal.css
+++ b/public/styles/universal.css
@@ -1,4 +1,6 @@
 /* All webpages */
+@import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap');
+
 html {
     width: 100%;
     height: 100%;
@@ -69,8 +71,8 @@ main {
 
 button, input[type="submit"] {
     background-color: rgb(146, 146, 146);
-    font-family:'Trebuchet MS';
-    font-size: 36px;
+    font-family: 'Koulen', cursive;
+    font-size: 2.25rem;
     color: rgb(0, 0, 0);
     width: 100%;
 }
